# pupil-detection

./: .gitignore  CMakeLists.txt  README.md
src/: CCA_Labeling.cpp  CCA_Labeling.h  detectIril.cpp  detectIril.h  main.cpp
